[tool.poetry]
name = "ledpi-controller"
version = "0.0.1"
description = "Raspberry Pi API component to control a WS2801 LED strip."
license = "MIT"
authors = [
	"Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>"
]
readme = "README.md"
repository = "https://github.com/muhlba91/ledpi-controller"
keywords = [
	"ws2801",
	"raspberrypi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
webcolors = { version = ">=1.11", python = ">=3.9" }
adafruit-circuitpython-ws2801 = { version = ">=0.10", python = ">=3.9" }
pyyaml = { version = ">=5.3", python = ">=3.9" }

[tool.poetry.dev-dependencies]
pytest = { version = ">=6.2", python = ">=3.9" }
pytest-cov = { version = ">=2.10", python = ">=3.9" }

[build-system]
requires = [
	"poetry_core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "src",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
  	"if __name__ == .__main__.:",
    "main()",
    "parser\\..",
    "argparse\\..",
]
fail_under = 95
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=src"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]
